--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,63 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.LoaderDots div {
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
+}
+.LoaderDots div:nth-child(1) {
+  left: 8px;
+  animation: LoaderDots1 0.6s infinite;
+}
+.LoaderDots div:nth-child(2) {
+  left: 8px;
+  animation: LoaderDots2 0.6s infinite;
+}
+.LoaderDots div:nth-child(3) {
+  left: 32px;
+  animation: LoaderDots2 0.6s infinite;
+}
+.LoaderDots div:nth-child(4) {
+  left: 56px;
+  animation: LoaderDots3 0.6s infinite;
+}
+@keyframes LoaderDots1 {
+  0% {
+      transform: scale(0);
+  }
+  100% {
+      transform: scale(1);
   }
 }
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@keyframes LoaderDots3 {
+  0% {
+      transform: scale(1);
+  }
+  100% {
+      transform: scale(0);
+  }
 }
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@keyframes LoaderDots2 {
+  0% {
+      transform: translate(0, 0);
+  }
+  100% {
+      transform: translate(24px, 0);
   }
 }
