--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,6 +8,18 @@ body {
   margin: 0;
 }
 
+::-webkit-scrollbar-track {
+  background-color: #f4f4f4;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-accentDark rounded-[10px];
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -15,6 +27,11 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+body p,
+h1 {
+  user-select: none;
 }
 
 .LoaderDots div {
@@ -59,6 +76,18 @@ a {
   100% {
     transform: translate(24px, 0);
   }
+}
+
+.verification-scroll::-webkit-scrollbar-track {
+  background-color: #f4f4f4;
+}
+
+.verification-scroll::-webkit-scrollbar-thumb {
+  @apply bg-accentDark rounded-[10px];
+}
+
+.verification-scroll::-webkit-scrollbar {
+  width: 3px;
 }
 
 #animate-left {
