--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@ body {
 
 ::-webkit-scrollbar-track {
   background-color: #f4f4f4;
+  @apply bg-[#f4f4f4] rounded-[10px];
 }
 
 ::-webkit-scrollbar-thumb {
@@ -17,7 +18,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 15px;
+  @apply w-[5px] md:w-[15px];
 }
 
 a {
@@ -79,7 +80,8 @@ h1 {
 }
 
 .verification-scroll::-webkit-scrollbar-track {
-  background-color: #f4f4f4;
+
+  @apply bg-[#f4f4f4] rounded-[10px];
 }
 
 .verification-scroll::-webkit-scrollbar-thumb {
